# chronos-vector

./: .dockerignore  .editorconfig  .gitignore  CONTRIBUTING.md  Cargo.toml  Dockerfile  LICENSE  LICENSE-APACHE  LICENSE-MIT  README.md  cliff.toml  config.example.toml  deny.toml  environment.yml  rustfmt.toml
.githooks/: commit-msg
.github/workflows/: ci.yml  docs.yml  release-plz.yml  release.yml
crates/chronos-vector/: CHANGELOG.md  Cargo.toml
crates/chronos-vector/src/: lib.rs
crates/cvx-analytics/: CHANGELOG.md  Cargo.toml
crates/cvx-analytics/benches/: analytics_bench.rs
crates/cvx-analytics/src/: anchor.rs  anchor_index.rs  backend.rs  bocpd.rs  calculus.rs  cohort.rs  counterfactual.rs  explain.rs  fisher_rao.rs  granger.rs  lib.rs  motifs.rs  multiscale.rs  ode.rs  pelt.rs  point_process.rs  procrustes.rs  signatures.rs  temporal_join.rs  temporal_ml.rs  topology.rs  torch_ode.rs  torch_train.rs  trajectory.rs  wasserstein.rs
crates/cvx-analytics/tests/: metrics_report.rs
crates/cvx-api/: CHANGELOG.md  Cargo.toml
crates/cvx-api/src/: handlers.rs  lib.rs  openapi.rs  router.rs  state.rs
crates/cvx-api/src/grpc/: mod.rs  proto.rs  service.rs
crates/cvx-api/tests/: rest_integration.rs
crates/cvx-bayes/: Cargo.toml
crates/cvx-bayes/src/: cpt.rs  lib.rs  network.rs  variable.rs
crates/cvx-core/: CHANGELOG.md  Cargo.toml
crates/cvx-core/src/: lib.rs
crates/cvx-core/src/config/: mod.rs
crates/cvx-core/src/error/: mod.rs
crates/cvx-core/src/traits/: mod.rs  quantizer.rs
crates/cvx-core/src/types/: change_point.rs  delta_entry.rs  embedding_space.rs  entity_timeline.rs  episode_encoding.rs  metadata_filter.rs  mod.rs  scored_result.rs  temporal_filter.rs  temporal_point.rs  vector.rs
crates/cvx-graph/: CHANGELOG.md  Cargo.toml
crates/cvx-graph/src/: entity.rs  graph.rs  lib.rs  relation.rs
crates/cvx-index/: CHANGELOG.md  Cargo.toml
crates/cvx-index/benches/: distance_kernels.rs  hnsw_search.rs
crates/cvx-index/src/: lib.rs
crates/cvx-index/src/hnsw/: bayesian_scorer.rs  concurrent.rs  metadata_store.rs  mod.rs  optimized.rs  partitioned.rs  region_mdp.rs  streaming.rs  temporal.rs  temporal_edges.rs  temporal_graph.rs  temporal_lsh.rs  typed_edges.rs
crates/cvx-index/src/metrics/: cosine.rs  dot_product.rs  l2.rs  mod.rs  simd_ops.rs
crates/cvx-index/tests/: metrics_report.rs
crates/cvx-ingest/: CHANGELOG.md  Cargo.toml
crates/cvx-ingest/src/: lib.rs  validation.rs
crates/cvx-ingest/src/delta/: mod.rs
crates/cvx-mcp/: CHANGELOG.md  Cargo.toml
crates/cvx-mcp/src/: embedder.rs  lib.rs  protocol.rs  server.rs  tools.rs
crates/cvx-python/: Cargo.toml  pyproject.toml
crates/cvx-python/src/: lib.rs
crates/cvx-python/tests/: test_chronos_vector.py
crates/cvx-query/: CHANGELOG.md  Cargo.toml
crates/cvx-query/src/: engine.rs  lib.rs  types.rs
crates/cvx-server/: CHANGELOG.md  Cargo.toml
crates/cvx-server/src/: main.rs
crates/cvx-storage/: CHANGELOG.md  Cargo.toml
crates/cvx-storage/src/: keys.rs  lib.rs  tiered.rs
crates/cvx-storage/src/cold/: mod.rs
crates/cvx-storage/src/hot/: mod.rs
crates/cvx-storage/src/memory/: mod.rs
crates/cvx-storage/src/wal/: mod.rs
crates/cvx-storage/src/warm/: mod.rs
data/: README.md
design/: CVX_Benchmark_Plan.md  CVX_Data_Virtualization_Spec.md  CVX_Explain_Interpretability_Spec.md  CVX_Implementation_Decisions.md  CVX_Iterative_Roadmap.md  CVX_MultiScale_Alignment_Spec.md  CVX_PRD_Technical.md  CVX_RFC_001_Architecture_Decisions.md  CVX_RFC_002_Correctness_Performance.md  CVX_RFC_003_NeuralODE_TorchBackend.md  CVX_RFC_004_Graph_Semantic_Regions.md  CVX_RFC_005_Query_Capabilities.md  CVX_RFC_007_Advanced_Temporal_Primitives.md  CVX_RFC_008_Temporal_Index_Architecture.md  CVX_RFC_009_LLM_Tool_Integration.md  CVX_Research_Protocol_001_Mental_Health.md  CVX_Stochastic_Analytics_Spec.md  CVX_Storage_Layout_Spec.md  CVX_Temporal_ML_Spec.md  CVX_Use_Cases_Analysis.md  Introduction.md  architecture.md
docs/: astro.config.mjs  package-lock.json  package.json
docs/public/: openapi.json
docs/public/plots/: analytics_drift.html  analytics_events.html  analytics_signatures.html  analytics_topology.html  anchor_anisotropy.html  anchor_projection.html  b1-explorer_fig_0.html  b1-explorer_fig_1.html  b1-explorer_fig_10.html  b1-explorer_fig_11.html  b1-explorer_fig_12.html  b1-explorer_fig_2.html  b1-explorer_fig_3.html  b1-explorer_fig_4.html  b1-explorer_fig_5.html  b1-explorer_fig_6.html  b1-explorer_fig_7.html  b1-explorer_fig_8.html  b1-explorer_fig_9.html  b2-clinical-anchoring_fig_0.html  b2-clinical-anchoring_fig_1.html  b2-clinical-anchoring_fig_2.html  b2-clinical-anchoring_fig_3.html  b3-clinical_fig_0.html  b3-clinical_fig_1.html  b3-clinical_fig_10.html  b3-clinical_fig_11.html  b3-clinical_fig_12.html  b3-clinical_fig_13.html  b3-clinical_fig_14.html  b3-clinical_fig_2.html  (+53 more)
notebooks/: B1_CLPsych.ipynb  B1_RSDD.ipynb  B1_eRisk.ipynb  B1_erisk_rigorous.ipynb  B1_interactive_explorer.ipynb  B1_linguistic_trajectory_mental_health.ipynb  B2_clinical_anchoring.ipynb  B3_clinical_dashboard.ipynb  B3_trump_impact.ipynb  B4_cohort_temporal_analysis.ipynb  B5_granger_motifs.ipynb  B6_cross_model_anchoring.ipynb  B7_political_polarization.ipynb  B8_parlamint_polarization.ipynb  E1_episodic_coding.ipynb  E2_episodic_alfworld.ipynb  E3_interactive_alfworld.ipynb  E4_iterative_coding.ipynb  E5_alfworld_gpt4o.ipynb  E6_alfworld_gpt4o_mini.ipynb  E7_online_learning.ipynb  E8_region_mdp.ipynb  E9_pipeline_inspection.ipynb  T_Benchmark_Partitioned.ipynb  T_Finance_Regimes.ipynb  T_Fraud_Detection.ipynb  T_Insider_Threat.ipynb  T_MAP_Elites.ipynb  T_MLOps_Drift.ipynb  T_NAB_Anomaly.ipynb
notebooks/cvx_utils/: __init__.py  region_mdp.py
results/: clpsych_results.json  clpsych_v2_results.json  erisk_results.json  erisk_v2_results.json  rsdd_results.json
scripts/: add_splits.py  generate_embeddings.py  generate_embeddings_v2.py  hpc_run_embeddings.sh  migrate_index.py  nb2docs.py  preprocess_clpsych.py  preprocess_erisk.py  preprocess_rsdd.py  train_neural_ode.py
(+103 files in other folders)
