[workspace]
resolver = "2"
members = [
  "crates/cvx-core",
  "crates/cvx-index",
  "crates/cvx-storage",
  "crates/cvx-ingest",
  "crates/cvx-analytics",
  "crates/cvx-query",
  "crates/cvx-api",
  "crates/cvx-server",
  "crates/chronos-vector",
  "crates/cvx-mcp",
  "crates/cvx-bayes",
  "crates/cvx-graph",
]
exclude = [
  "crates/cvx-python",
]

[workspace.package]
version = "0.1.1"
edition = "2024"
authors = ["Manuel Couto Pintos"]
license-file = "LICENSE"
rust-version = "1.88.0"
repository = "https://github.com/manucouto1/chronos-vector"

[workspace.dependencies]
# Serialization
serde = { version = "1", features = ["derive"] }

# Error handling
thiserror = "2"
anyhow = "1"

# Concurrency
rayon = "1"
parking_lot = "0.12"

# Serialization (internal)
rkyv = { version = "0.8", features = ["validation"] }
postcard = { version = "1", features = ["alloc"] }

# SIMD
pulp = { version = "0.22", features = ["macro"] }

# Collections
smallvec = { version = "1", features = ["union", "serde"] }

# Random
rand = "0.9"

# Bitmaps
roaring = { version = "0.10", features = ["serde"] }

# Storage
rocksdb = "0.23"

# gRPC
tonic = "0.13"
prost = "0.13"
tokio-stream = { version = "0.1", features = ["sync"] }

# HTTP / API
axum = "0.8"
serde_json = "1"
utoipa = { version = "5", features = ["axum_extras"] }
utoipa-swagger-ui = { version = "9", features = ["axum"] }
tower = "0.5"
tower-http = { version = "0.6", features = ["trace", "cors"] }

# Async runtime
tokio = { version = "1", features = ["full"] }

# Observability
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# PyTorch (TorchScript inference)
tch = "0.23"

# Python bindings
pyo3 = { version = "0.24", features = ["extension-module"] }

# Testing
proptest = "1"
criterion = { version = "0.5", features = ["html_reports"] }

# Workspace crates
cvx-core = { version = "0.1.1", path = "crates/cvx-core" }
cvx-index = { version = "0.1.1", path = "crates/cvx-index" }
cvx-storage = { version = "0.1.1", path = "crates/cvx-storage" }
cvx-ingest = { version = "0.1.1", path = "crates/cvx-ingest" }
cvx-analytics = { version = "0.1.1", path = "crates/cvx-analytics" }
cvx-query = { version = "0.1.1", path = "crates/cvx-query" }
cvx-api = { version = "0.1.1", path = "crates/cvx-api" }
cvx-server = { version = "0.1.1", path = "crates/cvx-server" }
