[package]
name = "cvx-analytics"
description = "Temporal analytics: Neural ODE, change point detection, and vector calculus"
version.workspace = true
edition.workspace = true
authors.workspace = true
license-file.workspace = true
rust-version.workspace = true
repository.workspace = true

[features]
default = []
neural-ode = []
pelt = []
bocpd = []
gpu-compute = []
torch-backend = ["dep:tch"]

[dependencies]
cvx-core = { workspace = true }
cvx-storage = { workspace = true }
serde = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
tch = { workspace = true, optional = true }

[dev-dependencies]
proptest = { workspace = true }
criterion = { workspace = true }
rand = { workspace = true }

[[bench]]
name = "analytics_bench"
harness = false
