[package]
name = "cvx-api"
description = "Dual-protocol API gateway (REST + gRPC) for ChronosVector"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
rust-version.workspace = true
repository.workspace = true

[features]
default = ["rest-api"]
rest-api = []
grpc-api = []

[dependencies]
cvx-core = { workspace = true }
cvx-index = { workspace = true }
cvx-ingest = { workspace = true }
cvx-storage = { workspace = true }
axum = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
tower = { workspace = true }
tower-http = { workspace = true }
tracing = { workspace = true }
thiserror = { workspace = true }

[dev-dependencies]
http-body-util = "0.1"
proptest = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
tower = { workspace = true }
