[package]
name = "cvx-core"
description = "Core types, traits, configuration, and error handling for ChronosVector"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
rust-version.workspace = true
repository.workspace = true

[dependencies]
serde = { workspace = true }
thiserror = { workspace = true }
toml = "0.8"
postcard = { workspace = true }

[dev-dependencies]
proptest = { workspace = true }
serde_json = "1"
