[package]
name = "cvx-index"
description = "Temporal index engine (ST-HNSW) with time-decay edges and SIMD distance kernels"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
rust-version.workspace = true
repository.workspace = true

[features]
default = ["simd-auto"]
simd-auto = []
simd-explicit = []
poincare = []

[dependencies]
cvx-core = { workspace = true }
serde = { workspace = true }
thiserror = { workspace = true }

[dev-dependencies]
proptest = { workspace = true }
criterion = { workspace = true }
