[package]
name = "cvx-index"
description = "Temporal index engine (ST-HNSW) with time-decay edges and SIMD distance kernels"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
rust-version.workspace = true
repository.workspace = true

[features]
default = []
poincare = []

[dependencies]
cvx-core = { workspace = true }
parking_lot = { workspace = true }
pulp = { workspace = true }
smallvec = { workspace = true }
rand = { workspace = true }
roaring = { workspace = true }

[dependencies.serde]
workspace = true

[dependencies.postcard]
workspace = true

[dev-dependencies]
proptest = { workspace = true }
criterion = { workspace = true }
serde_json = "1"

[[bench]]
name = "distance_kernels"
harness = false

[[bench]]
name = "hnsw_search"
harness = false
