[package]
name = "cvx-mcp"
version.workspace = true
edition.workspace = true
authors.workspace = true
license-file.workspace = true
rust-version.workspace = true
repository.workspace = true
description = "MCP (Model Context Protocol) server for ChronosVector"

[dependencies]
cvx-core = { path = "../cvx-core" }
cvx-index = { path = "../cvx-index" }
cvx-query = { path = "../cvx-query" }
cvx-analytics = { path = "../cvx-analytics" }
cvx-storage = { path = "../cvx-storage" }
serde = { workspace = true }
serde_json = "1"
tokio = { version = "1", features = ["full"] }

[dev-dependencies]
tempfile = "3"
