[package]
name = "cvx-mcp"
version.workspace = true
edition.workspace = true
authors.workspace = true
license-file.workspace = true
rust-version.workspace = true
repository.workspace = true
description = "MCP (Model Context Protocol) server for ChronosVector"

[dependencies]
cvx-core = { workspace = true }
cvx-index = { workspace = true }
cvx-query = { workspace = true }
cvx-analytics = { workspace = true }
cvx-storage = { workspace = true }
serde = { workspace = true }
serde_json = "1"
tokio = { version = "1", features = ["full"] }

[dev-dependencies]
tempfile = "3"
