[build-system]
requires = ["maturin>=1.0,<2.0"]
build-backend = "maturin"

[project]
name = "chronos-vector"
version = "0.1.0"
description = "Python bindings for ChronosVector temporal vector database"
requires-python = ">=3.9"
license = { text = "MIT OR Apache-2.0" }
authors = [{ name = "Manuel Couto Pintos" }]

[tool.maturin]
features = ["pyo3/extension-module"]
manifest-path = "Cargo.toml"
