[build-system]
requires = ["maturin>=1.0,<2.0"]
build-backend = "maturin"

[project]
name = "chronos-vector"
dynamic = ["version"]
description = "Python bindings for ChronosVector temporal vector database"
requires-python = ">=3.9"
license = { text = "Elastic-2.0" }
classifiers = [
    "License :: Other/Proprietary License",
    "Programming Language :: Rust",
    "Programming Language :: Python :: Implementation :: CPython",
]
authors = [{ name = "Manuel Couto Pintos" }]

[tool.maturin]
features = ["pyo3/extension-module"]
manifest-path = "Cargo.toml"
