[package]
name = "cvx-query"
description = "Query execution engine with eight temporal query types"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
rust-version.workspace = true
repository.workspace = true

[dependencies]
cvx-core = { workspace = true }
cvx-index = { workspace = true }
cvx-storage = { workspace = true }
cvx-analytics = { workspace = true }
serde = { workspace = true }
thiserror = { workspace = true }

[dev-dependencies]
proptest = { workspace = true }
criterion = { workspace = true }
