[package]
name = "cvx-query"
description = "Query execution engine with eight temporal query types"
version.workspace = true
edition.workspace = true
authors.workspace = true
license-file.workspace = true
rust-version.workspace = true
repository.workspace = true

[features]
default = []
torch-backend = ["cvx-analytics/torch-backend"]

[dependencies]
cvx-core = { workspace = true }
cvx-storage = { workspace = true }
cvx-analytics = { workspace = true }
serde = { workspace = true }
thiserror = { workspace = true }

[dev-dependencies]
cvx-index = { workspace = true }
proptest = { workspace = true }
criterion = { workspace = true }
