[package]
name = "cvx-server"
description = "ChronosVector server binary — bootstrap, config, and runtime"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
rust-version.workspace = true
repository.workspace = true

[features]
default = []
distributed = []

[dependencies]
cvx-api = { workspace = true }
anyhow = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
